# rustjay-template

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Info.plist  PORTING_GUIDE.md  README.md  build.rs
.cargo/: config.toml
src/: app.rs  main.rs
src/app/: commands.rs  events.rs  mod.rs  update.rs
src/audio/: device.rs  fft.rs  mod.rs  routing.rs
src/config/: mod.rs
src/core/: lfo.rs  mod.rs  state.rs  vertex.rs
src/engine/: blit.rs  mod.rs  pipeline.rs  renderer.rs  texture.rs  uniforms.rs
src/engine/shaders/: main.wgsl
src/gui/: gui.rs  mod.rs  renderer.rs
src/gui/gui/: tab_audio.rs  tab_color.rs  tab_control.rs  tab_input.rs  tab_lfo.rs  tab_output.rs  tab_presets.rs  tab_settings.rs
src/input/: mod.rs  ndi.rs  spout_input.rs  syphon_input.rs  webcam.rs
src/midi/: mod.rs
src/osc/: mod.rs
src/output/: mod.rs  ndi_output.rs  spout_output.rs  syphon_output.rs  v4l2_output.rs
src/presets/: mod.rs
src/web/: mod.rs  ui.html
