[package]
name = "rustjay-template"
version = "0.1.0"
edition = "2021"
authors = ["BlueJayLouche <bluejaylouche@gmail.com>"]
description = "RustJay Template - High-performance video processing application"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-template"
keywords = ["video", "vj", "ndi", "syphon", "real-time"]
categories = ["graphics", "multimedia"]

[dependencies]
# Windowing
winit = "0.30"

# Graphics - wgpu for cross-platform GPU acceleration
wgpu = { version = "25.0", features = ["spirv"] }
pollster = "0.3"

# Math and graphics
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# NDI (Network Device Interface)
grafton-ndi = "0.11"

# Threading
crossbeam = "0.8"

# Audio processing
cpal = "0.15"
rustfft = "6.2"
realfft = "3.4"

# Video input (optional - disable if libclang not available)
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and threading
tokio = { version = "1.42", features = ["rt-multi-thread", "sync", "net"] }

# Logging and debugging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time and scheduling
instant = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# MIDI support
midir = "0.10"

# OSC support
rosc = "0.10"

# Config directories
dirs = "5.0"

# Web server (for remote control UI)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# GUI - imgui for wgpu
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
# Syphon (macOS GPU texture sharing)
syphon-core = { path = "../syphon-rs/syphon-core" }
syphon-wgpu = { path = "../syphon-rs/syphon-wgpu" }
metal = "0.29"
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
# Spout (Windows GPU texture sharing) — TODO: identify and add crate on Windows
# See PORTING_GUIDE.md for instructions

[target.'cfg(target_os = "linux")'.dependencies]
# V4L2 loopback output — TODO: uncomment when implementing on Linux
# v4l = "0.14"
# See PORTING_GUIDE.md for instructions

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["webcam"]
webcam = ["nokhwa"]
spout = []   # Windows Spout support — fill in dep when crate is identified
v4l2 = []    # Linux V4L2 loopback output — fill in dep when implementing

[profile.dev]
opt-level = 1

# Make this an independent package (not part of parent workspace)
[workspace]
